# unity-gst-opencv

./: .gitignore  README.md
native-lib/: CMakeLists.txt  CMakePresets.json  native_lib.cpp  native_lib.h
readme/: edited_images.pptx
unity-prj/: .gitignore
unity-prj/Assets/Material/: ScreenMaterial.mat
unity-prj/Assets/Scenes/: SampleScene.unity
unity-prj/Assets/Scripts/: GstScreenUpdate.cs
unity-prj/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
unity-prj/ProjectSettings/: ProjectSettings.asset
